--- a/presentation_report/thesis/chapter02.tex
+++ b/presentation_report/thesis/chapter02.tex
@@ -13,7 +13,7 @@ This chapter introduces the methodological foundations for the experiments used 
 
 \section{TRAM-DAGs} \label{sec:methods_tram_dags}
 
-The goal of TRAM-DAGs is to estimate the structural equations of a given DAG in a flexible and, if desired, interpretable way. This enables the sampling of observational and interventional distributions, as well as make counterfactual statements. The approach requires data and a known causal graph describing the underlying structure. It is assumed that there are no hidden confounders. TRAM-DAGs estimate, for each variable $X_i$, a transformation function $Z_i = h_i(X_i \mid \operatorname{pa}(X_i))$, where $Z_i$ denotes the noise variable and $\operatorname{pa}(X_i)$ are the causal parents of $X_i$. Crucially, for continuous variables, this relationship can be inverted to yield the structural equation $X_i = h_i^{-1}(Z_i \mid \operatorname{pa}(X_i))$. The monotonically increasing transformation functions $h_i$ represent the conditional distribution  $X_i \mid \operatorname{pa}(X_i)$ on a latent scale $Z_i$. They are based on the framework of transformation models as introduced by \citet{hothorn2014} and were extended to deep TRAMs by \citet{sick2020}. The following summarizes the key ideas of these models, which form the building blocks of TRAM-DAGs.
+The goal of TRAM-DAGs \citep{sick2025} is to estimate the structural equations of a given DAG in a flexible and, if desired, interpretable way. This enables the sampling of observational and interventional distributions, as well as to make counterfactual statements. The approach requires data and a known causal graph describing the underlying structure. It is assumed that there are no hidden confounders. TRAM-DAGs estimate, for each variable $X_i$, a transformation function $Z_i = h_i(X_i \mid \operatorname{pa}(X_i))$, where $Z_i$ denotes the noise variable and $\operatorname{pa}(X_i)$ are the causal parents of $X_i$. Crucially, for continuous variables, this relationship can be inverted to yield the structural equation $X_i = h_i^{-1}(Z_i \mid \operatorname{pa}(X_i))$. The monotonically increasing transformation functions $h_i$ allow to determine the conditional distribution  $X_i \mid \operatorname{pa}(X_i)$ on a latent scale $Z_i$. They are based on the framework of transformation models as introduced by \citet{hothorn2014} that were extended to deep TRAMs by \citet{sick2020}. The following summarizes the key ideas of these models, which form the building blocks of TRAM-DAGs.
 
 
 \subsection{Transformation Models} \label{sec:trams}
@@ -39,7 +39,7 @@ h_I(y) = \frac{1}{M + 1} \sum_{k=0}^{M} \vartheta_k \, \text{B}_{k, M}(y),
 \label{eq:methods_bernstein_polynomial}
 \end{equation}
 
-where $\vartheta_k, k = 0, \ldots, M$ are the coefficients and $\text{B}_{k, M}(y)$ are the corresponding Bernstein basis polynomials. The coefficients $\vartheta_k$ are constrained to be monotonically increasing to ensure that the transformation function $h_I(y)$ is strictly increasing. More details on the technical implementation of the Bernstein polynomial (Equation~\ref{eq:methods_bernstein_polynomial}) in the context of deep-TRAMs are provided in the Appendix~\ref{sec:bernstein_polynomial}
+where $\vartheta_k, k = 0, \ldots, M$ are the coefficients and $\text{B}_{k, M}(y)$ are the corresponding Bernstein basis polynomials. The coefficients $\vartheta_k$ are constrained to be monotonically increasing to ensure that the transformation function $h_I(y)$ is strictly increasing. More details on the technical implementation of the Bernstein polynomial (Equation~\ref{eq:methods_bernstein_polynomial}) in the context of deep-TRAMs are provided in the Appendix~\ref{sec:bernstein_polynomial}.
 
 
 
@@ -123,7 +123,7 @@ where $h_I(y)$ is the intercept (simple or complex), $\mathbf{x}_{L}$ are predic
 
 \medskip
 
-The resulting distribution function of deep TRAMs is invariant to the choice of the inverse-link function $F_Z$ (latent distribution) in an unconditional \citep{hothorn2018} or fully flexible (CI) setting. However, once restrictions are introduced on the influence of the predictors -- such as LS or CS -- the model assumes a fixed scale of dependence. The choice of latent distribution may depend on (i) assumptions about the data-generating process, (ii) the conventional and widely used interpretation scale for parameters (e.g., log-odds ratios or log-hazard ratios), and (iii) a data-driven criterion such as selecting the distribution that minimizes the negative log-likelihood (NLL) on the observed data.
+The resulting distribution function of deep TRAMs is invariant to the choice of the inverse-link function $F_Z$ (latent distribution) in an unconditional \citep{hothorn2018} or fully flexible (CI) setting. However, once restrictions are introduced on the influence of the predictors -- such as LS or CS -- the model assumes a fixed scale of dependence. The choice of latent distribution may depend on (i) assumptions about the data-generating process, (ii) the conventional and widely used interpretation scale for parameters (e.g., log-odds ratios or log-hazard ratios, see Appendix~\ref{sec:interpretation_linear_coefficients}), and (iii) a data-driven criterion such as selecting the distribution that minimizes the negative log-likelihood (NLL) on the observed data.
 
 %
 \medskip
@@ -138,7 +138,7 @@ The resulting distribution function of deep TRAMs is invariant to the choice of 
 
 
 In TRAM-DAGs, deep transformation models (see Section~\ref{sec:deep_trams}) are applied within a causal setting. We assume a pre-specified DAG that represents the causal dependencies among variables. 
-Figure~\ref{fig:tram_dag} illustrates the basic idea using a simple DAG with three variables and no hidden confounders. Each node's conditional distribution is modeled using a deep TRAM, given its parent variables in the DAG. The assumed influence of the parent variables must be specified as CI, LS or CS. In this example, $X_1$ is a continuous source node (i.e., without parents) and its transformation function consists only of a simple intercept (SI). $X_2$ is also continuous and depends on $X_1$ by a linear shift (LS). $X_3$ is an ordinal variable with four levels; its transformation function is influenced linearly by $X_1$ (LS) and non-linearly by $X_2$ (CS). The cut-points $h(x_{3,k} \mid x_1, x_2)$ represent the cumulative log-odds of levels $k = 1, 2, 3$ of $X_3$. The probability of the highest category ($k = 4$) is the complement of the cumulative probability of the first three.
+Figure~\ref{fig:tram_dag} illustrates the basic idea using a simple DAG with three variables and no hidden confounders. Each node's conditional distribution is modeled using a deep TRAM (Equation~\ref{eq:deep_tram_old}), given its parent variables in the DAG. The assumed influence of the parent variables must be specified as CI, LS or CS. In this example, $X_1$ is a continuous source node (i.e., without parents) and its transformation function consists only of a simple intercept (SI). $X_2$ is also continuous and depends on $X_1$ by a linear shift (LS). $X_3$ is an ordinal variable with four levels; its transformation function is influenced linearly by $X_1$ (LS) and non-linearly by $X_2$ (CS). The cut-points $h(x_{3,k} \mid x_1, x_2)$ represent the cumulative log-odds of levels $k = 1, 2, 3$ of $X_3$. The probability of the highest category ($k = 4$) is the complement of the cumulative probability of the first three.
 
 
 % include image /img/tram_dag.png
@@ -200,7 +200,7 @@ Once a TRAM-DAG is fitted on data, it can be used to sample from the observation
 \caption{Generate a complete sample from the observational distribution}
 \label{alg:sampling}
 \begin{algorithmic}
-\State \textbf{Given:} A fitted TRAM-DAG with structural equations $X_i = h^{-1}(Z_i \mid \text{pa}(X_i))$
+\State \textbf{Given:} A fitted TRAM-DAG with estimated transformation functions $Z_i = h(X_i \mid \text{pa}(X_i))$
 \For{each node $X_i$ in topological order}
   \State Sample latent value $z_i \sim F_{Z_i}$ \Comment{e.g., \texttt{rlogis()} in R}
   \If{$X_i$ is continuous}
@@ -250,7 +250,7 @@ The counterfactual estimation procedure is outlined in Algorithm~\ref{alg:single
 \caption{Answer a single counterfactual query}
 \label{alg:single_cf}
 \begin{algorithmic}
-\State \textbf{Given:} A TRAM-DAG model with estimated structural equations $X_k = h_k^{-1}(Z_k \mid \text{pa}(X_k))$
+\State \textbf{Given:} A TRAM-DAG model with estimated transformation functions $Z_k = h_k(X_k \mid \text{pa}(X_k))$
 \State \textbf{Input:} Observed sample $\mathbf{x}$, intervention $X_j := \alpha$
 \vspace{0.3em}
 \State \textbf{Step 1 (Abduction):} For each observed variable $x_k$, compute the corresponding latent value $z_k = h_k(x_k \mid \text{pa}(x_k))$
@@ -409,7 +409,7 @@ While interventional distributions (e.g., $P(X_i = x_i \mid \text{do}(X_j = \alp
 
 % RCTs are considered the gold standard for estimating the causal effect of a treatment due to their ability to eliminate confounding through randomization \citep{little2000}. However, RCTs typically aim to estimate the average treatment effect (ATE), which summarizes the effect of the treatment across the entire study population. This approach overlooks individual-level variation in treatment response: depending on their unique characteristics, some individuals may benefit substantially, others not at all, or even be harmed. 
 
-While the homogeneous treatment effect refers to the part of the effect that is equal for all patients, the heterogeneous treatment effect (HTE) describes the variation in treatment effects across individuals or subgroups. One reason for treatment effect heterogeneity is the presence of interaction variables \citep{hoogland2021}, also referred to as effect modifiers \citep{christensen2021}, which influence how the treatment effect varies depending on individual characteristics. However, even in the absence of explicit interaction terms, treatment effects can still exhibit heterogeneity in certain model classes, such as logistic regression \citep{hoogland2021}, or in other subclasses of transformation models. This phenomenon is further explored in Experiment 4 and will be discussed in detail in Section~\ref{sec:exp4_sc2}.
+While the homogeneous treatment effect refers to the part of the effect that is equal for all patients, the heterogeneous treatment effect describes the variation in treatment effects across individuals or subgroups. One reason for treatment effect heterogeneity is the presence of interaction variables \citep{hoogland2021}, also referred to as effect modifiers \citep{christensen2021}, which influence how the treatment effect varies depending on individual characteristics. However, even in the absence of explicit interaction terms, treatment effects can still exhibit heterogeneity in certain model classes, such as logistic regression \citep{hoogland2021}, or in other subclasses of transformation models. This phenomenon is further explored in Experiment 4 and will be discussed in detail in Section~\ref{sec:exp4_sc2}.
 
 In personalized medicine and informed decision-making, individual-level treatment effects are also of interest besides population averages. The individual treatment effect compares the potential outcomes for an individual~$i$ under two different treatment options: the potential outcome $Y_i(1)$ under treatment, and $Y_i(0)$ under control, as defined by Rubin's potential outcomes framework~\citep{rubin2005}. The individual treatment effect is typically defined as the difference between the two potential outcomes:
 
@@ -434,7 +434,7 @@ However, for any individual, only one of these two potential outcomes can be obs
 \label{eq:ignorability}
 \end{equation}
 
-Equation~\ref{eq:ignorability} implies that there are no unmeasured confounders affecting both treatment assignment and outcomes. In an RCT, this condition is typically satisfied by design. In contrast, for observational data, the covariate set $\mathbf{X}$ must contain a valid adjustment set to appropriately control for confounding. Additionally, care must be taken to avoid adjusting for collider variables, as this can introduce selection bias (see \citet{elwert2014} and \citet{hernan2025}). Finally, the positivity assumption requires that every individual has a non-zero probability of receiving each treatment level:
+Equation~\ref{eq:ignorability} implies that there are no unmeasured confounders affecting both treatment assignment and outcomes. In an RCT, this condition is typically satisfied by design. In contrast, for observational data, the covariate set $\mathbf{X}$ must contain a valid adjustment set to appropriately control for confounding. Additionally, care must be taken to avoid adjusting for collider variables, as this can introduce selection bias \citep{elwert2014, hernan2025}. Finally, the positivity assumption requires that every individual has a non-zero probability of receiving each treatment level:
 
 \begin{equation}
 0 < P(T = 1 \mid \mathbf{X} = \mathbf{x}) < 1 \quad \text{for all } \mathbf{x}.
@@ -442,7 +442,7 @@ Equation~\ref{eq:ignorability} implies that there are no unmeasured confounders 
 
 \medskip
 
-While the individual treatment effect is inherently unobservable, its expectation conditional on covariates can be identified under the assumptions above. This quantity is referred to as the conditional average treatment effect (CATE), or individualized treatment effect (ITE). In this thesis, we use the term ITE to denote this estimand. For an individual with covariates \( \mathbf{X} = \mathbf{x}_i \), the ITE can be identified as:
+While the individual treatment effect (Equation~\ref{eq:ind_tr_ef}) is inherently unobservable, its expectation conditional on covariates can be identified under the assumptions above. This quantity is referred to as the conditional average treatment effect (CATE), or individualized treatment effect (ITE). In this thesis, we use the term ITE to denote this estimand. For an individual with covariates \( \mathbf{X} = \mathbf{x}_i \), the ITE can be identified as:
 
 \medskip
 
@@ -489,7 +489,7 @@ While the individual treatment effect is inherently unobservable, its expectatio
 
 \medskip
 
-In the case of a binary outcome $Y$, where the expected value corresponds to the probability that $Y = 1$, the ITE for an individual with covariates $\mathbf{X} = \mathbf{x}_i$, under the identifiability assumptions, is given by:
+In the case of a binary outcome $Y$, where the expected value corresponds to the probability that $Y = 1$, the ITE for an individual with covariates $\mathbf{X} = \mathbf{x}_i$, under the identifiability assumptions, is given by \citep{hoogland2021}:
 
 \medskip
 
@@ -562,12 +562,12 @@ If $Y = 1$ indicates recovery, a positive ITE means that the individual is expec
 
 % An example of ITE estimation using a TRAM-DAG is provided in Appendix~\ref{appendix:ite_tram_example}.
 
-\textbf{ITE estimation:} In practice, the ITE (Equation~\ref{eq:ite}) is estimated by fitting a model to the observed data and then predicting the outcome under both treatment conditions. For binary outcomes, this requires a model that predicts the probability of $Y = 1$ under treatment and control (i.e., the expected value of a binary outcome; see Equation~\ref{eq:ITE_binary}). For continuous outcomes, a model is required that directly predicts the expected value of each potential outcome. Alternatively, one may compute the difference in the predicted medians of the potential outcomes, corresponding to the quantile treatment effect (QTE) at the median (Equation~\ref{eq:qte}). This is illustrated in the simulation example in Experiment~4 (see Section~\ref{ch:exp4}). An overview of the models used for ITE estimation is provided below.
+\textbf{ITE estimation:} In practice, the ITE (Equation~\ref{eq:ite}) is estimated by fitting a model to the observed data and then predicting the outcome under both treatment conditions. For binary outcomes, this requires a model that predicts the probability of $Y = 1$ under treatment and control (i.e., the expected value of a binary outcome; see Equation~\ref{eq:ITE_binary}). For continuous outcomes, a model is required that predicts the expected value of each potential outcome. Alternatively, one may compute the difference in the predicted medians of the potential outcomes, corresponding to the quantile treatment effect (QTE) \citep{chernozhukov2005} at the median (Equation~\ref{eq:qte}). This is illustrated in the simulation example in Experiment~4 (see Section~\ref{ch:exp4}). An overview of the models used for ITE estimation is provided below.
 
 
 \medskip
 
-\textbf{Models for ITE estimation:} \label{sec:ite_models} While many other approaches for ITE estimation exist, this thesis focuses on two widely used types of metalearners: the T-learner and the S-learner \citep{kunzel2019}. These methods are model-agnostic, meaning that any predictive algorithm can be used as a base model. The T-learner fits \textbf{t}wo separate models: one on the treated group and one on the control group. If the treatment was assigned randomly, confounding should not be a problem. The ITE for an individual is then estimated as the difference between the predicted outcomes from these two models (as in Equation~\ref{eq:ite}). In contrast, the S-learner fits a \textbf{s}ingle model on all individuals, incorporating the treatment indicator as an additional covariate to distinguish between treatment conditions. Therefore, the S-learner requires a model that is complex enough to capture interaction effects between treatment and covariates. 
+\textbf{Models for ITE estimation:} \label{sec:ite_models} While many other approaches for ITE estimation exist, this thesis focuses on two widely used types of metalearners: the T-learner and the S-learner \citep{kunzel2019}. These methods are model-agnostic, meaning that any predictive algorithm can be used as a base model. The T-learner fits \textbf{t}wo separate models: one on the treated group and one on the control group. If the treatment was assigned randomly, confounding should not be a problem. The ITE for an individual is then estimated as the difference between the predicted outcomes from these two models (as in Equation~\ref{eq:ite}). In contrast, the S-learner fits a \textbf{s}ingle model on all individuals, incorporating the treatment indicator as an additional covariate to distinguish between treatment conditions. Therefore, the S-learner requires a model that is complex enough to capture interaction effects between treatment and covariates. Once the S-learner is fitted, both potential outcomes for each individual can be estimated by making two predictions: one under the intervention $\text{do}(T = 0)$ and one under $\text{do}(T = 1)$.
 
 The experiments in this thesis were conducted using both S- and T-learners. For binary outcomes, we used models based on logistic regression, logistic lasso regression, random forests, and TRAM-DAGs to predict the probabilities of $Y = 1$ for the potential outcomes (see Experiments~2 and~3; Sections~\ref{ch:exp2} and~\ref{ch:experiment3}). For continuous outcomes, we used TRAM-DAGs, which—when applied as S-learners—can flexibly model treatment effect heterogeneity when specified with complex shift or complex intercept terms. For simplicity, the ITEs for continuous outcomes were computed as the difference in the predicted medians of the potential outcomes (Equation~\ref{eq:qte}), although estimation based on expected values would also have been possible, as discussed in the ITE estimation procedure in Experiment~4 (see Section~\ref{sec:methods_experiment4}).
 
@@ -575,7 +575,8 @@ The experiments in this thesis were conducted using both S- and T-learners. For 
 
 Accurate ITE estimation requires models that generalize well, which in turn means avoiding overfitting. Since ITEs are computed as differences between two outcome predictions, even small errors can accumulate. \citet{hoogland2021} emphasize the need to balance model complexity with data availability to avoid overfitting. They also highlight that estimating risk differences is inherently more challenging than predicting single outcomes. Furthermore, calibration is crucial when ITEs are derived from predicted potential outcomes \citep{hoogland2024}. While neural networks may be accurate, they often produce poorly calibrated probabilities \citep{guo2017}, which can mislead treatment effect estimation. Similarly, conventional models like logistic regression can overfit in small samples or high-dimensional settings, leading to extreme predictions. Penalization methods such as lasso shrink coefficients to improve generalization \citep{riley2021}, though studies have shown that they can perform inconsistently in low-sample scenarios \citep{calster2020}. These factors are important to consider when estimating ITEs.
 
-When using random forests as S-learners, care must be taken to ensure that the treatment variable is included in the splits. Proper tuning of hyperparameters like tree depth and variable selection (e.g., \texttt{mtry}) may be necessary to avoid overfitting.
+
+When using random forests, proper tuning of hyperparameters like tree depth and variable selection (e.g., \texttt{mtry}) may be necessary to avoid overfitting.
 In summary, model choice for ITE estimation should consider the complexity of treatment-outcome relationships, sample size, and calibration needs. While complex models like TRAM-DAGs and random forests can capture complicated heterogeneity, simpler models may offer more robust performance in smaller datasets or where treatment-covariate interactions are straightforward.
 
 
@@ -619,7 +620,10 @@ In summary, model choice for ITE estimation should consider the complexity of tr
 \medskip
 
 \textbf{Validation of ITE estimation:} \label{sec:ite_validation} \citet{hoogland2024} examined a variety of evaluation methods for assessing discrimination and calibration in ITE estimation. They emphasize that accurate prediction of potential outcomes should be considered a prerequisite for reliable ITE modeling. Furthermore, as in standard prediction modeling, proper validation should ideally be performed on independent (out-of-sample) data.
-In this thesis, although various quantitative evaluation metrics exist, we primarily relied on visual validation tools. One such approach is the ITE-ATE plot (see, e.g., Figure~\ref{fig:IST_density_ITE_ATE_glm_tlearner}), where individuals are grouped based on their predicted ITEs. Within each ITE-subgroup, the empirical ATE is calculated using observed outcomes. Depending on the context, the empirical ATE is calculated on the same scale as the predicted ITEs -- for example, as a risk difference for binary outcomes or an absolute difference for continuous outcomes. If the ITE estimates are well-calibrated, the observed ATEs should align with the predicted values, resulting in a calibration curve that lies along the identity line. Additionally, in simulation experiments where the true ITEs are known, estimation accuracy was assessed by directly comparing predicted and true effects. Furthermore, model calibration in terms of predictive performance $P(Y \mid \mathbf{X} = \mathbf{x})$ was evaluated using calibration plots. As an additional check, the average of the estimated ITEs across the population should equal the estimated ATE, i.e., $\mathbb{E}[\text{ITE}(X)] = \text{ATE}$. Large deviations from this condition may indicate systematic bias. However, satisfying this equality does not guarantee that the estimated ITEs are accurate at the individual level. All evaluations were conducted both on the training data and on a separate hold-out test set.
+In this thesis, although various quantitative evaluation metrics exist, we primarily relied on visual validation tools. 
+One such approach is the ITE-ATE plot (see, e.g., Figure~\ref{fig:IST_density_ITE_ATE_glm_tlearner}), where individuals are grouped based on their predicted ITEs. Within each ITE-subgroup, the empirical ATE is calculated using observed outcomes. Depending on the context, the empirical ATE is calculated on the same scale as the predicted ITEs -- for example, as a risk difference for binary outcomes or an absolute difference for continuous outcomes. If the ITE estimates are well-calibrated, the observed ATEs should align with the predicted values, resulting in a calibration curve that lies along the identity line. When estimating ITEs on real-world data, where the true ITEs are unknown, ITE-ATE plots serve to validate whether the estimated ITEs actually generalize with respect to observed outcomes when evaluated on an independent test set. However, ITE-ATE plots cannot reveal if there is additional treatment effect heterogeneity present that was not captured by the model. This limitation will be discussed on a simulated example in Experiment 3 (Scenario 3.2, Section~\ref{sec:exp3_sc2}).
+In simulation experiments with known true ITEs, estimation accuracy was assessed by directly comparing predicted and true ITEs -- providing a complete picture beyond the limitations of ITE-ATE plots, though only feasible in simulated settings. 
+Furthermore, model calibration in terms of predictive performance $P(Y \mid \mathbf{X} = \mathbf{x})$ was evaluated using calibration plots. As an additional check, the average of the estimated ITEs across the population should equal the estimated ATE, i.e., $\mathbb{E}[\text{ITE}(X)] = \text{ATE}$. Large deviations from this condition may indicate systematic bias. However, satisfying this equality does not guarantee that the estimated ITEs are accurate at the individual level. All evaluations were conducted both on the training data and on a separate hold-out test set.
 
 % It should be noted, that when estimating the ITEs , the mean of the ITEs across the population should equal the ATE, i.e., $\mathbb{E}[\tau(X)] = \text{ATE}$. However, if one estimated ITEs whose average is equal to the ATE in a population, this does not neccesarily mean that the estimated ITEs are correct. 
 % 
