--- a/presentation_report/thesis/chapter01.Rnw
+++ b/presentation_report/thesis/chapter01.Rnw
@@ -19,7 +19,7 @@ opts_chunk$set(
 
 % Why, what and how\dots
 
-The most important questions in research are mostly not associational, but causal \citep{pearl2009}. They concern the effects of interventions -- such as the impact of a treatment -- or seek explanations for observed outcomes, such as identifying which disease caused certain symptoms. They also include hypothetical scenarios; for example: what would the gross domestic product have been if interest rates had increased by 25 instead of 75 basis points? Answering such questions requires causal reasoning and demands an understanding of the underlying data-generating process. Purely associational approaches are typically not sufficient to draw valid causal conclusions.
+The most important questions in research are mostly not associational, but causal \citep{pearl2009}. They concern the effects of interventions -- such as the impact of a treatment -- or seek explanations for observed outcomes, such as identifying which potential risk factors caused the development of a disease. They also include hypothetical scenarios; for example: what would the gross domestic product have been if interest rates had increased by 25 instead of 75 basis points? Answering such questions requires causal reasoning and demands an understanding of the underlying data-generating process. Purely associational approaches are typically not sufficient to draw valid causal conclusions.
 
 % https://ascpt.onlinelibrary.wiley.com/doi/epdf/10.1002/cpt.3159
 % One of the main reasons for this is thatML methods are particularly good at learning about the status quofrom existing data to ultimately make outcome predictions thatare exactly in line with the current distribution of data character-istics, but usually not designed for tasks that involve the need toreason about interventions on the data generating distributionsleading to counterfactual scenarios,
@@ -144,7 +144,7 @@ The TRAM-DAG framework proposed by \citet{sick2025} builds a bridge between thes
 
 \section{Goals and contributions} \label{sec:goals_contributions}
 
-The first part of this thesis focuses on the TRAM-DAG framework. In particular, we apply the model to DAGs of varying complexity, extend it from continuous to ordinal and categorical predictors (see Section~\ref{sec:encoding_discrete_variables}), examine how variable scaling affects the interpretation of coefficients (see Section~\ref{sec:scaling_continuous_variables}), and make use of different neural network configurations (e.g., activation functions, batch normalization, dropout). Most analyses are conducted on simulated data, where the underlying data-generating process is known (see Sections~\ref{ch:exp1} and~\ref{ch:exp4}), but the model is also applied to real-world data to demonstrate its practical utility (see Section~\ref{ch:exp2}).
+The first part of this thesis focuses on the TRAM-DAG framework. In particular, we apply the model to data with underlying DAGs of varying complexity comprising different data types, examine how variable scaling affects the interpretation of coefficients (see Appendix~\ref{sec:scaling_continuous_variables}), and make use of different neural network configurations (e.g., activation functions, batch normalization, dropout). Most analyses are conducted on simulated data, where the underlying data-generating process is known (see Sections~\ref{ch:exp1} and~\ref{ch:exp4}), but the model is also applied to real-world data to demonstrate its practical utility (see Section~\ref{ch:exp2}).
 
 The second focus of the thesis is the estimation of individualized treatment effects (ITEs). Recent work by \citet{chen2025} showed that most causal machine learning models trained on RCT data failed to generalize when evaluated out of sample. We replicate part of their study by applying various models they used, as well as TRAM-DAGs, to the same data and analyze whether we reach similar conclusions (see Section~\ref{ch:exp2}). We further investigate why ITE estimation may fail in such settings and under which conditions reliable estimates can be obtained (see Section~\ref{ch:experiment3}). In addition, we demonstrate that TRAM-DAGs can be effectively used to estimate ITEs also in complex, non-randomized observational settings, provided the causal graph is known and fully observed (see Section~\ref{ch:exp4}). In doing so, we explore the potential of TRAM-DAGs as a framework for answering causal questions across different levels of Pearl's hierarchy.
 
@@ -153,14 +153,17 @@ The second focus of the thesis is the estimation of individualized treatment eff
 Formally, we aim to answer the following research questions in this thesis:
 
 \begin{itemize}
-    \item How can TRAM-DAGs be applied to estimate causal relationships across different scenarios, and subsequently be used to sample from observational, interventional, and counterfactual distributions? Using synthetic data, we demonstrate how the model can be applied (Section~\ref{ch:exp1}) and explain how to handle ordinal and categorical predictors (Section~\ref{sec:encoding_discrete_variables}), how variable scaling affects the interpretation of coefficients (Section~\ref{sec:scaling_continuous_variables}), and how interactions between variables can be modeled (Section~\ref{sec:complex_shift}).
+
+\item How can TRAM-DAGs be applied to estimate causal relationships across different scenarios, and subsequently be used to sample from observational, interventional, and counterfactual distributions? Using synthetic data, we demonstrate how the model can be applied (Section~\ref{ch:exp1}), explain how to handle discrete predictors -- in particular, ordinal ones (Appendix~\ref{sec:encoding_discrete_variables}) -- how variable scaling affects the interpretation of coefficients (Appendix~\ref{sec:scaling_continuous_variables}), and how interactions between variables can be modeled (Appendix~\ref{sec:complex_shift}).
 
     
     \item Do we reach similar conclusions as \citet{chen2025} when applying their models, as well as TRAM-DAGs, to the International Stroke Trial (IST) dataset for ITE estimation? Specifically, we examine whether ITEs estimated on the training data fail to generalize to the test data (Section~\ref{ch:exp2}).
 
-    \item What factors contribute to the failure of ITE estimation in causal machine learning models, and under which conditions can reliable estimates be obtained? We investigate this by applying various models across simulated scenarios that differ in observed variables and treatment effect size (Section~\ref{ch:experiment3}).
+    \item What factors contribute to poor ITE estimation in causal models when applied to RCT data with measured covariates describing individual patients, and under which conditions can reliable estimates be obtained? We investigate this by applying various models across simulated scenarios that differ in observed variables and treatment effect sizes (Section~\ref{ch:experiment3}).
 
-    \item Can TRAM-DAGs provide unbiased estimates of ITEs when the causal graph is fully observed? We evaluate this in a complex simulation setting with a continuous outcome, comparing both randomized and confounded designs (Section~\ref{ch:exp4}).
+
+
+    \item Can TRAM-DAGs provide unbiased estimates of ITEs when the causal graph is correct and fully observed? We evaluate this in a complex simulation setting with a continuous outcome, comparing both randomized and confounded designs (Section~\ref{ch:exp4}).
 \end{itemize}
 
 
