--- a/presentation_report/thesis/msc_report.tex
+++ b/presentation_report/thesis/msc_report.tex
@@ -16,7 +16,8 @@
 %
 
 	\vspace*{6cm}{\bfseries\Huge
-	Causal Modeling with Neural Networks \\ [5mm]
+	Causal Modeling \\
+	with Neural Networks \\ [5mm]
 and \\ [5mm]
 Individualized Treatment Effect Estimation \\ [5mm]
 	}
@@ -94,18 +95,20 @@ I want to thank my supervisors and all the people I had the chance to work and s
 
 
 
-This thesis explores TRAM-DAGs, a flexible neural network-based framework for modeling complex causal relationships in known directed acyclic graphs (DAGs), and investigates their use -- alongside other models -- for estimating individualized treatment effects (ITEs). TRAM-DAGs allow sampling from observational, interventional, and counterfactual distributions when the full DAG is known. 
+This thesis explores TRAM-DAGs, a flexible neural network-based framework for modeling complex causal relationships based on a correct and fully observed directed acyclic graph (DAG). TRAM-DAGs can be fitted to observational or RCT data and the fitted TRAM-DAGs allow sampling from observational, interventional, and counterfactual distributions. We investigate their use -- alongside other models -- for estimating individualized treatment effects (ITEs). 
 % We applied TRAM-DAGs to both simulated data and a real-world randomized controlled trial, with a focus on individualized treatment effect (ITE) estimation.
 
-We show how TRAM-DAGs can be used with continuous and ordinal or categorical predictor variables, investigate how variable scaling affects interpretability, and demonstrate how interactions between variables can be modeled. A key part of this work involved applying different causal machine learning models -- including TRAM-DAGs, logistic regression, and random forests -- to estimate ITEs on the International Stroke Trial (IST) dataset. In line with findings by \citet{chen2025}, none of the models produced ITE estimates that generalized to the test data.
+We demonstrate on simulated data how TRAM-DAGs can be used with continuous and ordinal variables, investigate how variable scaling affects interpretability, and demonstrate how interactions between variables can be modeled. 
 
-To explore possible reasons for this poor performance, we conducted simulation experiments under varying conditions. These revealed that, while models must be well calibrated and overfitting should be avoided, this alone may not suffice to guarantee valid ITE estimates. Weak treatment-covariate interaction effects and especially unmeasured effect modifiers were found to be critical challenges. When such variables are unobserved, the ignorability assumption alone may not ensure unbiased estimation -- an issue also highlighted by \citet{vegetabile2021}. These factors may help explain the limited model performance observed in the IST dataset.
+A key part of this work involved applying different causal models -- including TRAM-DAGs, logistic regression, and random forests -- to estimate ITEs on the International Stroke Trial (IST) dataset. In line with findings by \citet{chen2025}, none of the models produced ITE estimates that generalized to the test data.
+
+To explore possible reasons for this observed poor performance, we conducted simulation experiments under varying conditions. These revealed that such poor performance of ITE estimation can result from different problems: a) the fitted model does not generalize well and/or is not well calibrated, b) weak or absent treatment-covariate interaction effects, and c) there exist unmeasured or unobserved effect modifiers. When important effect modifiers are unobserved, the ignorability assumption alone may not ensure unbiased estimation -- an issue also highlighted by \citet{vegetabile2021}. These factors may help explain the limited model performance observed in the IST dataset.
 
 We also applied TRAM-DAGs in randomized and confounded simulation settings with relatively complex DAGs and found that, when the full DAG was observed and interaction effects were present, TRAM-DAGs accurately recovered causal relationships and provided unbiased ITE estimates for a continuous outcome.
 
-While promising, our work has limitations. The simulation scenarios may not fully capture real-world complexity, and evaluating ITE estimates on real data remains challenging since ground truth is unknown. The neural network-based TRAM-DAGs require training time and rely on modeling assumptions -- e.g., regarding the scale of conditional effects -- when parameter interpretability is desired.
+While promising, our work has limitations. The simulation scenarios may not fully capture real-world complexity. The neural network-based TRAM-DAGs require considerable training time, which complicates detailed simulation studies. Furthermore, to ensure interpretable coefficients are valid, the correct model must be fitted, which is often unknown.
 
-TRAM-DAGs offer a customizable modeling framework that enables the specification of both flexibility and interpretability, making them suitable for real-world causal inference tasks. Future work could apply TRAM-DAGs to more diverse datasets, including semi-structured data, and further investigate ITE estimation in the presence of unmeasured effect modifiers.
+TRAM-DAGs offer a customizable modeling framework that enables the specification of both flexibility and interpretability, making them suitable for real-world causal inference tasks. Future work could apply TRAM-DAGs to more diverse datasets, including semi-structured data, and conduct further sensitivity analyses of ITE estimation in the presence of unmeasured effect modifiers.
 
 
 % This thesis investigates the use of TRAM-DAGs \citep{sick2025} as a flexible approach for estimating structural equations in known directed acyclic graphs (DAGs). TRAM-DAGs offer several advantages: the model inherently knows when to control for covariates based on the DAG, is highly customizable in terms of flexibility and interpretability, and allows sampling from observational, interventional, and counterfactual distributions. We show how to incorporate ordinal predictors, model interactions, and examine how variable scaling affects interpretability.
